Some fixes recent chart command